tests/paczka1/fuzzy1/57998791.err
Error in line 1: nLUsYYnocMl A174 30,0
Error in line 4: lF4g A564 9,1
Error in line 8: 3gbqavkijU A564 7,4
Error in line 29: gyOLW A174 7,08
Error in line 33: nLUsYYnocMl S88 41,4
